--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -122,6 +122,11 @@ steps:
       workingDirectory: $(Agent.BuildDirectory)\testcli
     condition: and(succeeded(), ${{ not(parameters.useNuGet) }})
 
+  # Reclaim memory used by Verdaccio to reduce the chance of build OOM issues
+  - script: tskill node
+    displayName: Kill Verdaccio
+    condition: succeededOrFailed()
+
   - task: PowerShell@2
     displayName: List Visual Studio Components
     inputs:
@@ -196,15 +201,6 @@ steps:
 
   # We are experiencing random package restore failures.
   # We want to uploading the vedaccio logs to aid in diagnosing if it is verdaccio or npmjs.org
-  # To do so we have to kill the existing server because it keeps a file-lock on the log file
-  - task: PowerShell@2
-    displayName: Stop test npm server (verdaccio) to upload it's logs (on failure)
-    inputs:
-      targetType: inline
-      script: |
-        stop-process -name node
-    condition: failed()
-
   - task: PublishPipelineArtifact@1
     displayName: Upload Verdaccio.log (on failure)
     inputs:
