Address feedback and allow token as CLI param

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -7,8 +7,8 @@ pr:
   - "*-stable"
 
 variables:
-  - template: variables/github.yml
   - template: variables/msbuild.yml
+  - group: platform-override-zero-permission-token
 
 jobs:
   - job: Setup
