Initial ABI-safe JSI implementation (#5461)
* Initial ABI-safe JSI implementation

* Change files

* Format code

* Implement strongly typed approach for JSI values

* Use strongly type JSI ABI types

* Rename IJsiBuffer and JsiDataHandler to IJsiByteBuffer and JsiByteArrayUser

* Enable JSI unit tests (most of them fail)

* Pass all JSI unit tests

* Fix ReactWindows-Desktop.sln compilation

* Fix sample project compilation

* Fix compilation warnings

* Make jsi.cpp not use precompiled header

* Fix Microsoft.ReactNative.Cxx project

* Fix Playground compilation issues

* Fix Microsoft.ReactNative.Cxx compilation in new projects

* Remove unnecessary changes

* Reduce PCH size to try to avoid out of heap issue

* Address PR feedback and update DLL-based deployment

* Format code

* Fix build breaks after merge

--- a/vnext/Desktop/React.Windows.Desktop.vcxproj.filters
+++ b/vnext/Desktop/React.Windows.Desktop.vcxproj.filters
@@ -84,6 +84,9 @@
     <Midl Include="..\Microsoft.ReactNative\IReactNonAbiValue.idl">
       <Filter>ABI</Filter>
     </Midl>
+    <Midl Include="..\Microsoft.ReactNative\JsiApi.idl">
+      <Filter>ABI</Filter>
+    </Midl>
     <Midl Include="..\Microsoft.ReactNative\IViewManagerCore.idl">
       <Filter>ABI</Filter>
     </Midl>
