--- a/packages/@react-native-windows/cli/package.json
+++ b/packages/@react-native-windows/cli/package.json
@@ -53,6 +53,7 @@
     "eslint": "6.8.0",
     "jest": "^26.4.2",
     "just-scripts": "^0.36.1",
+    "prettier": "1.19.1",
     "typescript": "^3.8.3"
   },
   "files": [
