--- a/packages/@rnw-scripts/babel-node-config/package.json
+++ b/packages/@rnw-scripts/babel-node-config/package.json
@@ -7,7 +7,8 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
-    "eslint": "6.8.0"
+    "eslint": "6.8.0",
+    "prettier": "1.19.1"
   },
   "peerDependencies": {
     "@babel/core": "^7.8.0",
