--- a/packages/@rnw-scripts/find-repo-root/package.json
+++ b/packages/@rnw-scripts/find-repo-root/package.json
@@ -20,6 +20,7 @@
     "@types/find-up": "^4.0.0",
     "eslint": "6.8.0",
     "just-scripts": "^0.36.1",
+    "prettier": "1.19.1",
     "typescript": "^3.8.3"
   },
   "beachball": {
