--- a/packages/@rnw-scripts/jest-debug-config/package.json
+++ b/packages/@rnw-scripts/jest-debug-config/package.json
@@ -12,7 +12,8 @@
     "@babel/preset-typescript": "^7.8.3",
     "babel-jest": "^26.3.0",
     "eslint": "6.8.0",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "prettier": "1.19.1"
   },
   "peerDependencies": {
     "babel-jest": "^26.3.0",
