--- a/packages/@rnw-scripts/package-utils/package.json
+++ b/packages/@rnw-scripts/package-utils/package.json
@@ -22,6 +22,7 @@
     "@types/lodash": "^4.14.161",
     "eslint": "6.8.0",
     "just-scripts": "^0.36.1",
+    "prettier": "1.19.1",
     "typescript": "^3.8.3"
   },
   "beachball": {
