--- a/packages/E2ETest/package.json
+++ b/packages/E2ETest/package.json
@@ -46,6 +46,7 @@
     "eslint": "6.8.0",
     "just-scripts": "^0.36.1",
     "metro-react-native-babel-preset": "^0.56.0",
+    "prettier": "1.19.1",
     "react-test-renderer": "16.9.0",
     "rimraf": "^3.0.0",
     "ts-node": "^7.0.1",
