--- a/packages/react-native-platform-override/package.json
+++ b/packages/react-native-platform-override/package.json
@@ -63,6 +63,7 @@
     "jest": "^26.4.2",
     "just-scripts": "^0.36.1",
     "minimatch": "^3.0.4",
+    "prettier": "1.19.1",
     "typescript": "^3.8.3"
   },
   "engines": {
