--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -65,6 +65,7 @@
     "flow-bin": "^0.128.0",
     "jscodeshift": "^0.9.0",
     "just-scripts": "^0.36.1",
+    "prettier": "1.19.1",
     "react": "16.13.1",
     "react-native": "0.0.0-e96f1e1d8",
     "react-native-platform-override": "^0.2.8",
