--- a/packages/react-native-windows-codegen/package.json
+++ b/packages/react-native-windows-codegen/package.json
@@ -37,6 +37,7 @@
     "eslint": "6.8.0",
     "jest": "^26.4.2",
     "just-scripts": "^0.36.1",
+    "prettier": "1.19.1",
     "typescript": "^3.8.3"
   }
 }
