--- a/vnext/package.json
+++ b/vnext/package.json
@@ -59,20 +59,21 @@
     "@types/react-native": "^0.63.18",
     "eslint": "6.8.0",
     "eslint-plugin-prettier": "2.6.2",
-    "flow-bin": "^0.128.0",
+    "flow-bin": "^0.129.0",
     "jscodeshift": "^0.9.0",
     "just-scripts": "^0.36.1",
     "prettier": "1.17.0",
     "react": "16.13.1",
-    "react-native": "0.0.0-e96f1e1d8",
+    "react-native": "0.0.0-d3fb036d6",
     "react-native-platform-override": "^0.3.0",
     "react-native-windows-codegen": "0.1.6",
     "react-refresh": "^0.4.0",
+    "react-shallow-renderer": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "16.13.1",
-    "react-native": "0.0.0-e96f1e1d8"
+    "react-native": "0.0.0-d3fb036d6"
   },
   "beachball": {
     "defaultNpmTag": "canary",
