--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -38,6 +38,11 @@ steps:
     submodules: false # set to 'true' for a single level of submodules or 'recursive' to get submodules of submodules
     persistCredentials: false # set to 'true' to leave the OAuth token in the Git config after the initial fetch
 
+# Work around issue of parameters not getting expanded in conditions properly	
+  - powershell: |	
+      Write-Host "##vso[task.setvariable variable=localConfig]${{ parameters.configuration}}"	
+      Write-Host "##vso[task.setvariable variable=MSBUILDDEBUGPATH]$(Build.StagingDirectory)\CrashDumps"
+
   - task: CmdLine@2
     displayName: Build project (Release)
     inputs:
