--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -28,7 +28,7 @@ parameters:
     default: ''
   - name: continueOnBuildFailure
     type: boolean
-    default: false
+    default: true
 
 steps:
   - checkout: self # self represents the repo where the initial Pipelines YAML file was found
@@ -48,7 +48,7 @@ steps:
     inputs:
       script: npx --no-install react-native run-windows --arch ${{ parameters.platform }} --no-launch --logging --buildLogDirectory $(Build.BinariesDirectory)\${{ parameters.platform }}\${{ parameters.configuration }}\BuildLogs --release ${{ parameters.additionalRunArguments }}
       workingDirectory: $(Agent.BuildDirectory)
-    continueOnError: true
+    continueOnError: ${{ parameters.continueOnBuildFailure }}
     condition: and(succeeded(), eq('Release', variables['localConfig']))
 
   - task: CmdLine@2
@@ -56,5 +56,5 @@ steps:
     inputs:
       script: npx --no-install react-native run-windows --arch ${{ parameters.platform }} --no-launch --logging --buildLogDirectory $(Build.BinariesDirectory)\${{ parameters.platform }}\${{ parameters.configuration }}\BuildLogs ${{ parameters.additionalRunArguments }}
       workingDirectory: $(Agent.BuildDirectory)\testcli
-    continueOnError: true
+    continueOnError: ${{ parameters.continueOnBuildFailure }}
     condition: and(succeeded(), eq('Debug', variables['localConfig']))
