--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -28,7 +28,7 @@ parameters:
     default: ''
   - name: continueOnBuildFailure
     type: boolean
-    default: true
+    default: false
 
 steps:
   - checkout: self # self represents the repo where the initial Pipelines YAML file was found
