--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -502,7 +502,6 @@ jobs:
           projectType: app
           additionalInitArguments: --namespace MyCompany.MyApplication.MyComponent
           additionalRunArguments:
-          continueOnBuildFailure: false
         X86DebugCs:
           language: cs
           configuration: Debug
@@ -510,31 +509,26 @@ jobs:
           projectType: app
           additionalInitArguments: --namespace MyCompany.MyApplication.MyComponent
           additionalRunArguments:
-          continueOnBuildFailure: false
         #X86ReleaseCpp:
         #  language: cpp
         #  configuration: Release
         #  platform: x86
         #  projectType: app
-        #  continueOnBuildFailure: false
         #X86ReleaseCs:
         #  language: cs
         #  configuration: Release
         #  platform: x86
         #  projectType: app
-        #  continueOnBuildFailure: false
         #X64DebugCpp:
         #  language: cpp
         #  configuration: Debug
         #  platform: x64
         #  projectType: app
-        #  continueOnBuildFailure: false
         #X64DebugCs:
         #  language: cs
         #  configuration: Debug
         #  platform: x64
         #  projectType: app
-        #  continueOnBuildFailure: false
         X64ReleaseCpp:
           language: cpp
           configuration: Release
@@ -542,7 +536,6 @@ jobs:
           projectType: app
           additionalInitArguments:
           additionalRunArguments:
-          continueOnBuildFailure: false
         X64ReleaseCs:
           language: cs
           configuration: Release
@@ -550,19 +543,16 @@ jobs:
           projectType: app
           additionalInitArguments:
           additionalRunArguments:
-          continueOnBuildFailure: false
         #ArmDebugCpp:
         #  language: cpp
         #  configuration: Debug
         #  platform: arm
         #  projectType: app
-        #  continueOnBuildFailure: false
         #ArmDebugCs:
         #  language: cs
         #  configuration: Debug
         #  platform: arm
         #  projectType: app
-        #  continueOnBuildFailure: false
         ArmReleaseCpp:
           language: cpp
           configuration: Release
@@ -570,7 +560,6 @@ jobs:
           projectType: app
           additionalInitArguments:
           additionalRunArguments: --no-deploy
-          continueOnBuildFailure: false
         ArmReleaseCs:
           language: cs
           configuration: Release
@@ -578,31 +567,26 @@ jobs:
           projectType: app
           additionalInitArguments:
           additionalRunArguments: --no-deploy
-          continueOnBuildFailure: false
         #Arm64DebugCpp:
         #  language: cpp
         #  configuration: Debug
         #  platform: arm64
         #  projectType: app
-        #  continueOnBuildFailure: false
         #Arm64DebugCs:
         #  language: cs
         #  configuration: Debug
         #  platform: arm64
         #  projectType: app
-        #  continueOnBuildFailure: false
         #Arm64ReleaseCpp:
         #  language: cpp
         #  configuration: Release
         #  platform: arm64
         #  projectType: app
-        #  continueOnBuildFailure: false
         #Arm64ReleaseCs:
         #  language: cs
         #  configuration: Release
         #  platform: arm64
         #  projectType: app
-        #  continueOnBuildFailure: false
         WinUI3_X86DebugCpp:
           language: cpp
           configuration: Debug
@@ -626,7 +610,6 @@ jobs:
           projectType: lib
           additionalInitArguments:
           additionalRunArguments: --no-autolink --no-deploy
-          continueOnBuildFailure: false
         X86DebugCsLib:
           language: cs
           configuration: Debug
@@ -634,7 +617,6 @@ jobs:
           projectType: lib
           additionalInitArguments:
           additionalRunArguments: --no-autolink --no-deploy
-          continueOnBuildFailure: false
 
     timeoutInMinutes: 50 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
@@ -648,7 +630,7 @@ jobs:
           platform: $(platform)
           additionalInitArguments: $(additionalInitArguments)
           additionalRunArguments: $(additionalRunArguments)
-          continueOnBuildFailure: $(continueOnBuildFailure)
+          continueOnBuildFailure: eq(variables.continueOnBuildFailure, "true")
           projectType: $(projectType)
 
   - job: CliInitExperimental
