--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -630,7 +630,7 @@ jobs:
           platform: $(platform)
           additionalInitArguments: $(additionalInitArguments)
           additionalRunArguments: $(additionalRunArguments)
-          continueOnBuildFailure: eq(variables.continueOnBuildFailure, "true")
+          continueOnBuildFailure: ${{ eq(variables.continueOnBuildFailure, "true") }}
           projectType: $(projectType)
 
   - job: CliInitExperimental
