Yeet the matrix

--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -502,7 +502,6 @@ jobs:
           projectType: app
           additionalInitArguments: --namespace MyCompany.MyApplication.MyComponent
           additionalRunArguments:
-          continueOnBuildFailure: false
         X86DebugCs:
           language: cs
           configuration: Debug
@@ -510,31 +509,26 @@ jobs:
           projectType: app
           additionalInitArguments: --namespace MyCompany.MyApplication.MyComponent
           additionalRunArguments:
-          continueOnBuildFailure: false
         #X86ReleaseCpp:
         #  language: cpp
         #  configuration: Release
         #  platform: x86
         #  projectType: app
-        #  continueOnBuildFailure: false
         #X86ReleaseCs:
         #  language: cs
         #  configuration: Release
         #  platform: x86
         #  projectType: app
-        #  continueOnBuildFailure: false
         #X64DebugCpp:
         #  language: cpp
         #  configuration: Debug
         #  platform: x64
         #  projectType: app
-        #  continueOnBuildFailure: false
         #X64DebugCs:
         #  language: cs
         #  configuration: Debug
         #  platform: x64
         #  projectType: app
-        #  continueOnBuildFailure: false
         X64ReleaseCpp:
           language: cpp
           configuration: Release
@@ -542,7 +536,6 @@ jobs:
           projectType: app
           additionalInitArguments:
           additionalRunArguments:
-          continueOnBuildFailure: false
         X64ReleaseCs:
           language: cs
           configuration: Release
@@ -550,19 +543,16 @@ jobs:
           projectType: app
           additionalInitArguments:
           additionalRunArguments:
-          continueOnBuildFailure: false
         #ArmDebugCpp:
         #  language: cpp
         #  configuration: Debug
         #  platform: arm
         #  projectType: app
-        #  continueOnBuildFailure: false
         #ArmDebugCs:
         #  language: cs
         #  configuration: Debug
         #  platform: arm
         #  projectType: app
-        #  continueOnBuildFailure: false
         ArmReleaseCpp:
           language: cpp
           configuration: Release
@@ -570,7 +560,6 @@ jobs:
           projectType: app
           additionalInitArguments:
           additionalRunArguments: --no-deploy
-          continueOnBuildFailure: false
         ArmReleaseCs:
           language: cs
           configuration: Release
@@ -578,47 +567,26 @@ jobs:
           projectType: app
           additionalInitArguments:
           additionalRunArguments: --no-deploy
-          continueOnBuildFailure: false
         #Arm64DebugCpp:
         #  language: cpp
         #  configuration: Debug
         #  platform: arm64
         #  projectType: app
-        #  continueOnBuildFailure: false
         #Arm64DebugCs:
         #  language: cs
         #  configuration: Debug
         #  platform: arm64
         #  projectType: app
-        #  continueOnBuildFailure: false
         #Arm64ReleaseCpp:
         #  language: cpp
         #  configuration: Release
         #  platform: arm64
         #  projectType: app
-        #  continueOnBuildFailure: false
         #Arm64ReleaseCs:
         #  language: cs
         #  configuration: Release
         #  platform: arm64
         #  projectType: app
-        #  continueOnBuildFailure: false
-        WinUI3_X86DebugCpp:
-          language: cpp
-          configuration: Debug
-          platform: x86
-          projectType: app
-          additionalInitArguments: --useWinUI3 true
-          additionalRunArguments:
-          continueOnBuildFailure: true # See issue #6129
-        WinUI3_X86DebugCs:
-          language: cs
-          configuration: Debug
-          platform: x86
-          projectType: app
-          additionalInitArguments: --useWinUI3 true
-          additionalRunArguments:
-          continueOnBuildFailure: true # See issue #6129
         X86DebugCppLib:
           language: cpp
           configuration: Debug
@@ -626,7 +594,6 @@ jobs:
           projectType: lib
           additionalInitArguments:
           additionalRunArguments: --no-autolink --no-deploy
-          continueOnBuildFailure: false
         X86DebugCsLib:
           language: cs
           configuration: Debug
@@ -634,7 +601,6 @@ jobs:
           projectType: lib
           additionalInitArguments:
           additionalRunArguments: --no-autolink --no-deploy
-          continueOnBuildFailure: false
 
     timeoutInMinutes: 50 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
@@ -650,6 +616,36 @@ jobs:
           additionalRunArguments: $(additionalRunArguments)
           continueOnBuildFailure: $(continueOnBuildFailure)
           projectType: $(projectType)
+
+  - job: CliInitWinUI3
+    variables:
+      - template: variables/vs2019.yml
+    displayName: Verify react-native init WinUI3
+    dependsOn: Setup
+    condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' )
+    strategy:
+      matrix: # Why we only build some flavors: https://github.com/microsoft/react-native-windows/issues/4308
+        X86DebugCpp:
+          language: cpp
+          configuration: Debug
+          platform: x86
+        X86DebugCs:
+          language: cs
+          configuration: Debug
+          platform: x86
+    timeoutInMinutes: 50 # how long to run the job before automatically cancelling
+    cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
+    pool:
+      vmImage: $(VmImage)
+    steps:
+      - template: templates/react-native-init.yml
+        parameters:
+          language: $(language)
+          configuration: $(configuration)
+          platform: $(platform)
+          additionalInitArguments: --useWinUI3 true
+          continueOnBuildFailure: true # See issue #6129
+          projectType: app
 
   - job: CliInitExperimental
     variables:
