Integrate 7/29 Nightly RN Build (#6140)
* Integrate 7/14 Nightly RN Build

https://github.com/facebook/react-native/compare/e96f1e1d8...d3fb036d6

The main work here is related to changes upstream to match the version of eslint-plugin-react-hooks to the one used by the community eslint config (4.0.7). A minor release after this adds new warnings and causes breaks with upstream RN code still, and upstream RN hasn't adopted the new version into their lockfile yet. Getting around this with a selective depenedncy resolution for now.

We also see more path length warnings for flow, so we ignore a few more paths it doesn't need to know about.

Commits: https://github.com/facebook/react-native/compare/e96f1e1d8...d3fb036d6

Web debugging was broken upstream from 7/9 to 7/28 (fixed with https://github.com/facebook/react-native/commit/db474a47b70e4fa50f594f4dea8a2f531ca9fc07)

* Integrate 7/29 Nightly Build

Commits: https://github.com/facebook/react-native/compare/e96f1e1d8...949dedca9

(not adding a changelog for the description on this one since there are 120 commits)

Doing a larger integration than usual because web debugging was broken upstream from 7/9 to 7/28.

Not many changes that concern us apart from some JS dependency changes. Some of the changes pulled out into monorepo packages may effect us if changes happen to them that are unpublished, and we will need a better story for those soon.

We need to make local copies of flow typings that are currently in RN core but not published. Starting up a discussion there and tracking with #6139

* Change files

* Tell Git about capitalization change

--- a/packages/microsoft-reactnative-sampleapps/package.json
+++ b/packages/microsoft-reactnative-sampleapps/package.json
@@ -11,8 +11,8 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-native": "0.0.0-e96f1e1d8",
+    "react": "0.0.0-experimental-aae83a4b9",
+    "react-native": "0.0.0-949dedca9",
     "react-native-windows": "0.0.0-canary.174"
   },
   "devDependencies": {
