--- a/vnext/Microsoft.ReactNative.IntegrationTests/Microsoft.ReactNative.IntegrationTests.vcxproj
+++ b/vnext/Microsoft.ReactNative.IntegrationTests/Microsoft.ReactNative.IntegrationTests.vcxproj
@@ -118,9 +118,9 @@
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="$(JSI_SourcePath)\jsi\test\testlib.cpp">
+    <ClCompile Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.cpp">
       <!--
-        The JSI tests have a number of violations that we must suppress to avoid chaning the code.
+        The JSI tests have a number of violations that we must suppress to avoid changing the code.
         C4100 - unreferenced formal parameter
         C4245 - 'initializing': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
         C4389 - '==': signed/unsigned mismatch
@@ -131,7 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MockReactPackageProvider.h" />
-    <ClInclude Include="$(JSI_SourcePath)\jsi\test\testlib.h" />
+    <ClInclude Include="$(ReactNativeDir)\ReactCommon\jsi\jsi\test\testlib.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
