--- a/.ado/templates/e2e-test-job.yml
+++ b/.ado/templates/e2e-test-job.yml
@@ -14,8 +14,7 @@ jobs:
       - name: BuildLogDirectory
         value: $(Build.BinariesDirectory)\$(BuildPlatform)\BuildLogs
 
-    pool:
-      vmImage: $(vmImage)
+    pool: $(containerPool)
     container: 
       image: $(containerImage)
       endpoint: rnw-ci-containers
