--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -55,8 +55,7 @@ jobs:
         #Arm64Release:
         #  BuildConfiguration: Release
         #  BuildPlatform: ARM64
-    pool:
-      vmImage: $(vmImage)
+    pool: $(containerPool)
     container: 
       image: $(containerImage)
       endpoint: rnw-ci-containers
@@ -159,8 +158,7 @@ jobs:
         X86:
           BuildConfiguration: Debug
           BuildPlatform: x86
-    pool:
-      vmImage: $(vmImage)
+    pool: $(containerPool)
     container: 
       image: $(containerImage)
       endpoint: rnw-ci-containers
@@ -222,8 +220,7 @@ jobs:
         X64Release:
           BuildConfiguration: Release
           BuildPlatform: x64
-    pool:
-      vmImage: $(vmImage)
+    pool: $(containerPool)
     container: 
       image: $(containerImage)
       endpoint: rnw-ci-containers
@@ -333,8 +330,7 @@ jobs:
         #  BuildPlatform: ARM64
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
-    pool:
-      vmImage: $(VmImage)
+    pool: $(containerPool)
 
     container: 
       image: $(containerImage)
@@ -415,8 +411,7 @@ jobs:
         ARM64Release:
           BuildConfiguration: Release
           BuildPlatform: ARM64
-    pool:
-      vmImage: $(vmImage)
+    pool: $(containerPool)
     container: 
       image: $(containerImage)
       endpoint: rnw-ci-containers
@@ -636,8 +631,7 @@ jobs:
 
     timeoutInMinutes: 50 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
-    pool:
-      vmImage: $(vmImage)
+    pool: $(containerPool)
     container: 
       image: $(containerImage)
       endpoint: rnw-ci-containers
@@ -667,8 +661,7 @@ jobs:
       )
     timeoutInMinutes: 40 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
-    pool:
-      vmImage: $(vmImage)
+    pool: $(containerPool)
     container: 
       image: $(containerImage)
       endpoint: rnw-ci-containers
@@ -694,8 +687,7 @@ jobs:
     displayName: JavaScript Checks
     dependsOn: Setup
     condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' )
-    pool:
-      vmImage: $(VmImage)
+    pool: $(containerPool)
     
     container: 
       image: $(containerImage)
