--- a/.ado/templates/integration-test-job.yml
+++ b/.ado/templates/integration-test-job.yml
@@ -12,10 +12,10 @@ jobs:
       - template: ../variables/vs2019.yml
       - name: BuildLogDirectory
         value: $(Build.BinariesDirectory)\$(BuildPlatform)\BuildLogs
-
-    pool:
-      vmImage: $(VmImage)
-
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     timeoutInMinutes: 60 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
 
