--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -55,8 +55,10 @@ jobs:
         #Arm64Release:
         #  BuildConfiguration: Release
         #  BuildPlatform: ARM64
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
 
@@ -156,8 +158,10 @@ jobs:
         X86:
           BuildConfiguration: Debug
           BuildPlatform: x86
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
 
@@ -216,8 +220,10 @@ jobs:
         X64Release:
           BuildConfiguration: Release
           BuildPlatform: x64
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
 
@@ -323,9 +329,10 @@ jobs:
         #  BuildPlatform: ARM64
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
-    pool:
-      vmImage: $(VmImage)
-
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     steps:
       - checkout: self
         clean: false
@@ -401,8 +408,10 @@ jobs:
         ARM64Release:
           BuildConfiguration: Release
           BuildPlatform: ARM64
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     timeoutInMinutes: 60 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
 
@@ -604,8 +613,12 @@ jobs:
 
     timeoutInMinutes: 50 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
-    pool:
-      vmImage: $(VmImage)
+    
+    pool: rnw-pool
+    # container: 
+    #   image: $(containerImage)
+    #   endpoint: rnw-ci-containers
+
     steps:
       - template: templates/react-native-init.yml
         parameters:
@@ -634,8 +647,10 @@ jobs:
           platform: x86
     timeoutInMinutes: 50 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     steps:
       - template: templates/react-native-init.yml
         parameters:
@@ -661,8 +676,10 @@ jobs:
       )
     timeoutInMinutes: 40 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     strategy:
       matrix:
         cpp:
@@ -684,8 +701,10 @@ jobs:
     displayName: JavaScript Checks
     dependsOn: Setup
     condition: ne( dependencies.Setup.outputs['checkPayload.shouldSkipPRBuild'], 'True' )
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-pool
+    container: 
+      image: $(containerImage)
+      endpoint: rnw-ci-containers
     timeoutInMinutes: 30 # how long to run the job before automatically cancelling
     cancelTimeoutInMinutes: 5 # how much time to give 'run always even if cancelled tasks' before killing them
     steps:
