Integrate 8/17 Nightly RN Build
Commits: https://github.com/facebook/react-native/compare/10b4b9505...423155127

Going ahead to this build, since it moves us off of an experimental version of React that confuses component governance. The interesting bits are new APIs for NativeAnimatedModule. No regression if we don't implement them, and they're not implemented on iOS, so this is logged as #6161 for future work.

--- a/packages/IntegrationTest/package.json
+++ b/packages/IntegrationTest/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "chai": "^4.2.0",
-    "react": "0.0.0-experimental-aae83a4b9",
-    "react-native": "0.0.0-10b4b9505",
+    "react": "16.13.1",
+    "react-native": "0.0.0-423155127",
     "react-native-windows": "^0.0.0-canary.175"
   },
   "devDependencies": {
