--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -34,12 +34,13 @@
     "event-target-shim": "^5.0.1",
     "fbjs": "^1.0.0",
     "fbjs-scripts": "^1.1.0",
-    "hermes-engine": "~0.5.0",
+    "hermes-engine": "~0.6.0",
     "invariant": "^2.2.4",
     "jsc-android": "^245459.0.0",
-    "metro-babel-register": "0.61.0",
-    "metro-react-native-babel-transformer": "0.61.0",
-    "metro-source-map": "0.61.0",
+    "metro-babel-register": "0.62.0",
+    "metro-react-native-babel-transformer": "0.62.0",
+    "metro-runtime": "0.62.0",
+    "metro-source-map": "0.62.0",
     "nullthrows": "^1.1.1",
     "pretty-format": "^26.0.1",
     "promise": "^8.0.3",
@@ -49,7 +50,7 @@
     "react-devtools-core": "^4.6.0",
     "react-refresh": "^0.4.0",
     "regenerator-runtime": "^0.13.2",
-    "scheduler": "0.0.0-experimental-aae83a4b9",
+    "scheduler": "0.19.1",
     "stacktrace-parser": "^0.1.3",
     "use-subscription": "^1.0.0",
     "whatwg-fetch": "^3.0.0"
@@ -65,19 +66,19 @@
     "@types/react-native": "^0.63.18",
     "babel-eslint": "10.0.1",
     "eslint": "6.8.0",
-    "flow-bin": "^0.130.0",
+    "flow-bin": "^0.131.0",
     "jscodeshift": "^0.9.0",
     "just-scripts": "^0.36.1",
     "prettier": "1.19.1",
-    "react": "0.0.0-experimental-aae83a4b9",
-    "react-native": "0.0.0-10b4b9505",
+    "react": "16.13.1",
+    "react-native": "0.0.0-423155127",
     "react-native-platform-override": "^0.3.1",
     "react-shallow-renderer": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
-    "react": "0.0.0-experimental-aae83a4b9",
-    "react-native": "0.0.0-10b4b9505"
+    "react": "16.13.1",
+    "react-native": "0.0.0-423155127"
   },
   "beachball": {
     "defaultNpmTag": "canary",
